Fix contact form textarea clipping

--- a/css/style.sass
+++ b/css/style.sass
@@ -54,6 +54,7 @@ input, textarea, button
 
 textarea
   height: 6em
+  width: calc(100% - 1em)
 
 input[type="submit"], .SubmitButton
   background-color: $text-color
